@@ -1,6 +1,7 @@
 package com.example.demo.controller;
 
 import com.example.demo.Result;
+import com.example.demo.auth.CurrentUserService;
 import com.example.demo.dto.ai.ChatMessage;
 import com.example.demo.dto.ai.ProblemAnalysisRequest;
 import com.example.demo.dto.ai.ProblemAnalysisResponse;
@@ -12,8 +13,8 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import jakarta.annotation.Resource;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.web.bind.annotation.*;
+
 import java.time.LocalDateTime;
-import java.util.ArrayList;
 import java.util.*;
 
 @Slf4j
@@ -24,6 +25,9 @@ public class ErrorController {
     private ErrorItemRepository errorRepository;
 
     @Resource
+    private CurrentUserService currentUserService;
+
+    @Resource
     private AIService aiService;
 
     @Resource
@@ -31,82 +35,40 @@ public class ErrorController {
 
     private static final String PROBLEM_ANALYSIS_PROMPT = """
         你是一位资深的算法教练，擅长分析学生的错题并提供针对性的学习建议。
-        
-        请根据提供的错题信息，生成一份详细的分析报告。输出格式必须是标准的JSON格式，结构如下：
-        {
-          "summary": "简短总结这道题的核心难点和学生的问题",
-          "errorAnalysis": {
-            "rootCause": "根本原因（如：概念理解偏差、边界条件遗漏、算法选择不当等）",
-            "detailedExplanation": "详细解释为什么会出现这种错误",
-            "commonMistakes": ["常见错误1", "常见错误2", "常见错误3"]
-          },
-          "knowledgePoints": [
-            {
-              "name": "知识点名称",
-              "description": "知识点说明",
-              "masteryLevel": "beginner/intermediate/advanced",
-              "relatedResources": ["推荐资源1", "推荐资源2"]
-            }
-          ],
-          "suggestions": [
-            {
-              "title": "建议标题",
-              "description": "详细说明",
-              "priority": "high/medium/low",
-              "actionItems": ["具体行动1", "具体行动2"]
-            }
-          ],
-          "recommendedProblems": [
-            {
-              "title": "推荐题目名称",
-              "difficulty": "easy/medium/hard",
-              "reason": "推荐理由",
-              "source": "来源（如LeetCode、牛客网等）"
-            }
-          ],
-          "studyPlan": {
-            "shortTerm": "短期目标（本周）",
-            "midTerm": "中期目标（本月）",
-            "longTerm": "长期目标（本季度）",
-            "dailyTasks": ["每日任务1", "每日任务2", "每日任务3"]
-          }
-        }
-        
-        注意事项：
-        1. 必须严格按照JSON格式输出，不要添加任何其他文字说明
-        2. 根据学生的等级和题目难度调整建议的深度
-        3. 如果题目通过率低，说明是难题，要给予鼓励
-        4. 如果用户多次尝试失败，要分析可能的思维误区
-        5. 推荐的练习题要与当前题目知识点相关
+        请根据提供的错题信息，生成一份详细的分析报告。输出格式必须是标准 JSON。
         """;
 
     @GetMapping("/errors")
     public Result<List<ErrorItem>> getErrors() {
-        return Result.success(errorRepository.findAll());
+        Long userId = currentUserService.requireCurrentUserId();
+        return Result.success(errorRepository.findByUserIdOrderByUpdatedAtDesc(userId));
     }
 
     @GetMapping("/errors/{id}")
     public Result<ErrorItem> getErrorById(@PathVariable Long id) {
-        Optional<ErrorItem> errorItem = errorRepository.findById(id);
-        if (errorItem.isEmpty()) {
-            return Result.fail(40401, "错题不存在");
-        }
-        return Result.success(errorItem.get());
+        Long userId = currentUserService.requireCurrentUserId();
+        return errorRepository.findByIdAndUserId(id, userId)
+                .map(Result::success)
+                .orElseGet(() -> Result.fail(40401, "错题不存在"));
     }
 
     @PostMapping("/errors")
     public Result<ErrorItem> addError(@RequestBody ErrorItem errorItem) {
-        errorItem.setCreatedAt(LocalDateTime.now());
+        Long userId = currentUserService.requireCurrentUserId();
+        LocalDateTime now = LocalDateTime.now();
+        errorItem.setUserId(userId);
+        errorItem.setCreatedAt(now);
+        errorItem.setUpdatedAt(now);
         if (errorItem.getAnalysisStatus() == null) {
             errorItem.setAnalysisStatus("未分析");
         }
-        ErrorItem saved = errorRepository.save(errorItem);
-        return Result.success(saved);
+        return Result.success(errorRepository.save(errorItem));
     }
 
     @DeleteMapping("/errors/{id}")
     public Result<Map<String, Object>> deleteError(@PathVariable Long id) {
-        Optional<ErrorItem> errorItem = errorRepository.findById(id);
+        Long userId = currentUserService.requireCurrentUserId();
+        Optional<ErrorItem> errorItem = errorRepository.findByIdAndUserId(id, userId);
         if (errorItem.isEmpty()) {
             return Result.fail(40401, "错题不存在");
         }
@@ -119,13 +81,13 @@ public class ErrorController {
 
     @PutMapping("/errors/{id}")
     public Result<ErrorItem> updateError(@PathVariable Long id, @RequestBody ErrorItem errorItemRequest) {
-        Optional<ErrorItem> optionalError = errorRepository.findById(id);
+        Long userId = currentUserService.requireCurrentUserId();
+        Optional<ErrorItem> optionalError = errorRepository.findByIdAndUserId(id, userId);
         if (optionalError.isEmpty()) {
             return Result.fail(40401, "错题不存在");
         }
-        
+
         ErrorItem errorItem = optionalError.get();
-        
         if (errorItemRequest.getQuestion() != null) {
             errorItem.setQuestion(errorItemRequest.getQuestion());
         }
@@ -141,34 +103,31 @@ public class ErrorController {
         if (errorItemRequest.getAnalysis() != null) {
             errorItem.setAnalysis(errorItemRequest.getAnalysis());
         }
-        
-        ErrorItem saved = errorRepository.save(errorItem);
-        return Result.success(saved);
+        errorItem.setUpdatedAt(LocalDateTime.now());
+        return Result.success(errorRepository.save(errorItem));
     }
 
     @PostMapping("/error-analysis")
     public Result<Map<String, Object>> analyzeError(@RequestBody ProblemAnalysisRequest request) {
-        log.info("开始AI分析，错题ID: {}, 题目: {}", request.getErrorId(), request.getQuestion());
+        log.info("开始 AI 错题分析, errorId={}", request.getErrorId());
 
         ProblemAnalysisResponse analysisResponse;
-        
         try {
             analysisResponse = callAIForAnalysis(request);
         } catch (Exception e) {
-            log.warn("AI分析失败，使用本地降级方案: {}", e.getMessage());
+            log.warn("AI 分析失败，使用降级方案: {}", e.getMessage());
             analysisResponse = generateLocalAnalysis(request);
         }
 
         String analysisText = convertToText(analysisResponse);
-
         if (request.getErrorId() != null) {
-            Optional<ErrorItem> optionalError = errorRepository.findById(request.getErrorId());
-            if (optionalError.isPresent()) {
-                ErrorItem errorItem = optionalError.get();
+            Long userId = currentUserService.requireCurrentUserId();
+            errorRepository.findByIdAndUserId(request.getErrorId(), userId).ifPresent(errorItem -> {
                 errorItem.setAnalysisStatus("已分析");
                 errorItem.setAnalysis(analysisText);
+                errorItem.setUpdatedAt(LocalDateTime.now());
                 errorRepository.save(errorItem);
-            }
+            });
         }
 
         Map<String, Object> result = new HashMap<>();
@@ -176,17 +135,13 @@ public class ErrorController {
         result.put("analysis", analysisText);
         result.put("analysisData", analysisResponse);
         result.put("analyzedAt", LocalDateTime.now().toString());
-
         return Result.success(result);
     }
 
     private ProblemAnalysisResponse callAIForAnalysis(ProblemAnalysisRequest request) {
-        String userPrompt = buildAnalysisPrompt(request);
-
         List<ChatMessage> messages = new ArrayList<>();
         messages.add(ChatMessage.system(PROBLEM_ANALYSIS_PROMPT));
-        messages.add(ChatMessage.user(userPrompt));
-
+        messages.add(ChatMessage.user(buildAnalysisPrompt(request)));
         String responseContent = aiService.chat(messages);
         return parseAnalysisResponse(responseContent);
     }
@@ -194,41 +149,17 @@ public class ErrorController {
     private String buildAnalysisPrompt(ProblemAnalysisRequest request) {
         StringBuilder prompt = new StringBuilder();
         prompt.append("请分析以下错题：\n\n");
-
-        prompt.append("【题目信息】\n");
-        prompt.append("- 题目：").append(request.getQuestion() != null ? request.getQuestion() : "未知").append("\n");
-        prompt.append("- 难度：").append(request.getDifficulty() != null ? request.getDifficulty() : "未知").append("\n");
-        prompt.append("- 赛道：").append(request.getTrack() != null ? request.getTrack() : "未知").append("\n");
-        
-        if (request.getSolveRate() != null) {
-            prompt.append("- 全站通过率：").append(request.getSolveRate()).append("%\n");
+        prompt.append("题目：").append(request.getQuestion() == null ? "未知" : request.getQuestion()).append("\n");
+        prompt.append("用户答案：").append(request.getUserAnswer() == null ? "未提交" : request.getUserAnswer()).append("\n");
+        if (request.getDescription() != null && !request.getDescription().isBlank()) {
+            prompt.append("补充描述：").append(request.getDescription()).append("\n");
         }
-        if (request.getAvgTimeSeconds() != null) {
-            int minutes = request.getAvgTimeSeconds() / 60;
-            int seconds = request.getAvgTimeSeconds() % 60;
-            prompt.append("- 平均做题时长：").append(minutes).append("分").append(seconds).append("秒\n");
+        if (request.getDifficulty() != null && !request.getDifficulty().isBlank()) {
+            prompt.append("难度：").append(request.getDifficulty()).append("\n");
         }
-        
-        prompt.append("\n【学生答题情况】\n");
-        prompt.append("- 学生答案：").append(request.getUserAnswer() != null ? request.getUserAnswer() : "未提交").append("\n");
-        prompt.append("- 学生等级：").append(request.getUserLevel() != null ? request.getUserLevel() : "未知").append("\n");
-        
-        if (request.getUserAttempts() != null) {
-            prompt.append("- 尝试次数：").append(request.getUserAttempts()).append("次\n");
+        if (request.getTrack() != null && !request.getTrack().isBlank()) {
+            prompt.append("赛道：").append(request.getTrack()).append("\n");
         }
-        
-        if (request.getDescription() != null && !request.getDescription().isEmpty()) {
-            prompt.append("\n【题目描述/错误详情】\n");
-            prompt.append(request.getDescription()).append("\n");
-        }
-
-        if (request.getRelatedTopics() != null && !request.getRelatedTopics().isEmpty()) {
-            prompt.append("\n【相关知识点】\n");
-            prompt.append(String.join("、", request.getRelatedTopics())).append("\n");
-        }
-
-        prompt.append("\n请生成详细的分析报告，严格按照JSON格式输出。");
-        
         return prompt.toString();
     }
 
@@ -240,117 +171,68 @@ public class ErrorController {
             } else if (content.contains("```")) {
                 jsonContent = content.replaceAll("(?s)```\\s*", "").replaceAll("(?s)\\s*```", "").trim();
             }
-            
             return objectMapper.readValue(jsonContent, ProblemAnalysisResponse.class);
         } catch (JsonProcessingException e) {
-            log.error("解析AI响应失败: {}", e.getMessage());
-            throw new AIService.AIException("AI响应解析失败", e);
+            throw new AIService.AIException("AI 响应解析失败", e);
         }
     }
 
     private ProblemAnalysisResponse generateLocalAnalysis(ProblemAnalysisRequest request) {
         ProblemAnalysisResponse response = new ProblemAnalysisResponse();
-        
-        response.setSummary("根据题目分析，这是一道需要仔细思考的算法题。");
+        response.setSummary("这是一道需要回到题意和选项本身重新核对的题目。");
 
         ProblemAnalysisResponse.ErrorAnalysis errorAnalysis = new ProblemAnalysisResponse.ErrorAnalysis();
-        errorAnalysis.setRootCause("需要进一步分析题目条件和边界情况");
-        errorAnalysis.setDetailedExplanation("建议仔细审题，注意题目中的约束条件和特殊情况。");
-        errorAnalysis.setCommonMistakes(Arrays.asList(
-            "边界条件处理不当",
-            "时间复杂度估算错误",
-            "特殊情况遗漏"
-        ));
+        errorAnalysis.setRootCause("对题意、边界或关键知识点的理解还不够稳定");
+        errorAnalysis.setDetailedExplanation("建议先复盘题干，再对照自己的答案定位偏差点。");
+        errorAnalysis.setCommonMistakes(List.of("忽略边界条件", "概念混淆", "选项理解不完整"));
         response.setErrorAnalysis(errorAnalysis);
 
-        List<ProblemAnalysisResponse.KnowledgePoint> knowledgePoints = new ArrayList<>();
-        ProblemAnalysisResponse.KnowledgePoint kp = new ProblemAnalysisResponse.KnowledgePoint();
-        kp.setName("算法基础");
-        kp.setDescription("掌握基本算法思想和复杂度分析");
-        kp.setMasteryLevel("intermediate");
-        kp.setRelatedResources(Arrays.asList("算法导论", "LeetCode题解"));
-        knowledgePoints.add(kp);
-        response.setKnowledgePoints(knowledgePoints);
+        ProblemAnalysisResponse.KnowledgePoint knowledgePoint = new ProblemAnalysisResponse.KnowledgePoint();
+        knowledgePoint.setName("基础题意分析");
+        knowledgePoint.setDescription("先确认题目到底在考什么，再判断选项或解法。");
+        knowledgePoint.setMasteryLevel("beginner");
+        knowledgePoint.setRelatedResources(List.of("重看题目说明", "整理错因笔记"));
+        response.setKnowledgePoints(List.of(knowledgePoint));
 
-        List<ProblemAnalysisResponse.ImprovementSuggestion> suggestions = new ArrayList<>();
-        ProblemAnalysisResponse.ImprovementSuggestion s = new ProblemAnalysisResponse.ImprovementSuggestion();
-        s.setTitle("加强基础练习");
-        s.setDescription("从简单题目开始，逐步提升难度");
-        s.setPriority("high");
-        s.setActionItems(Arrays.asList("每天完成2-3道简单题", "总结解题模板", "复习错题本"));
-        suggestions.add(s);
-        response.setSuggestions(suggestions);
+        ProblemAnalysisResponse.ImprovementSuggestion suggestion = new ProblemAnalysisResponse.ImprovementSuggestion();
+        suggestion.setTitle("先做一次定向复盘");
+        suggestion.setDescription("把正确答案、你的答案、错因三列写清楚。");
+        suggestion.setPriority("high");
+        suggestion.setActionItems(List.of("重读题干", "对比正确答案", "记录错因"));
+        response.setSuggestions(List.of(suggestion));
 
-        List<ProblemAnalysisResponse.RecommendedProblem> problems = new ArrayList<>();
-        ProblemAnalysisResponse.RecommendedProblem p = new ProblemAnalysisResponse.RecommendedProblem();
-        p.setTitle("两数之和");
-        p.setDifficulty("easy");
-        p.setReason("巩固哈希表基础");
-        p.setSource("LeetCode");
-        problems.add(p);
-        response.setRecommendedProblems(problems);
+        ProblemAnalysisResponse.RecommendedProblem recommendedProblem = new ProblemAnalysisResponse.RecommendedProblem();
+        recommendedProblem.setTitle("同类型基础练习");
+        recommendedProblem.setDifficulty("easy");
+        recommendedProblem.setReason("先把当前知识点练熟，再提升难度");
+        recommendedProblem.setSource("AlgoMind");
+        response.setRecommendedProblems(List.of(recommendedProblem));
 
         ProblemAnalysisResponse.StudyPlan studyPlan = new ProblemAnalysisResponse.StudyPlan();
-        studyPlan.setShortTerm("本周完成5道相关题目");
-        studyPlan.setMidTerm("本月掌握该类型题目的解题模板");
-        studyPlan.setLongTerm("建立完整的知识体系");
-        studyPlan.setDailyTasks(Arrays.asList("复习今日错题", "完成1道相关练习", "总结解题思路"));
+        studyPlan.setShortTerm("今天完成本题复盘");
+        studyPlan.setMidTerm("本周再练 3 道同类题");
+        studyPlan.setLongTerm("建立稳定的审题和答题习惯");
+        studyPlan.setDailyTasks(List.of("复盘 1 道错题", "整理 1 条错因", "重做 1 道类似题"));
         response.setStudyPlan(studyPlan);
 
         return response;
     }
 
     private String convertToText(ProblemAnalysisResponse response) {
-        StringBuilder sb = new StringBuilder();
-        
-        sb.append("【AI 错题分析报告】\n\n");
-        sb.append("摘要：").append(response.getSummary()).append("\n\n");
-        
+        StringBuilder builder = new StringBuilder();
+        if (response.getSummary() != null) {
+            builder.append("总结：").append(response.getSummary()).append("\n\n");
+        }
         if (response.getErrorAnalysis() != null) {
-            sb.append("═══ 错误原因分析 ═══\n");
-            sb.append("根本原因：").append(response.getErrorAnalysis().getRootCause()).append("\n");
-            sb.append("详细说明：").append(response.getErrorAnalysis().getDetailedExplanation()).append("\n");
-            sb.append("常见错误：\n");
-            for (String mistake : response.getErrorAnalysis().getCommonMistakes()) {
-                sb.append("  • ").append(mistake).append("\n");
-            }
-            sb.append("\n");
+            builder.append("根因：").append(response.getErrorAnalysis().getRootCause()).append("\n");
+            builder.append("说明：").append(response.getErrorAnalysis().getDetailedExplanation()).append("\n");
         }
-
-        if (response.getKnowledgePoints() != null && !response.getKnowledgePoints().isEmpty()) {
-            sb.append("═══ 相关知识点 ═══\n");
-            for (ProblemAnalysisResponse.KnowledgePoint kp : response.getKnowledgePoints()) {
-                sb.append("• ").append(kp.getName()).append("（").append(kp.getMasteryLevel()).append("）\n");
-                sb.append("  ").append(kp.getDescription()).append("\n");
-            }
-            sb.append("\n");
-        }
-
         if (response.getSuggestions() != null && !response.getSuggestions().isEmpty()) {
-            sb.append("═══ 改进建议 ═══\n");
-            for (ProblemAnalysisResponse.ImprovementSuggestion s : response.getSuggestions()) {
-                sb.append("【").append(s.getTitle()).append("】").append("（").append(s.getPriority()).append("）\n");
-                sb.append("  ").append(s.getDescription()).append("\n");
+            builder.append("\n建议：\n");
+            for (ProblemAnalysisResponse.ImprovementSuggestion suggestion : response.getSuggestions()) {
+                builder.append("- ").append(suggestion.getTitle()).append("：").append(suggestion.getDescription()).append("\n");
             }
-            sb.append("\n");
         }
-
-        if (response.getRecommendedProblems() != null && !response.getRecommendedProblems().isEmpty()) {
-            sb.append("═══ 推荐练习 ═══\n");
-            for (ProblemAnalysisResponse.RecommendedProblem p : response.getRecommendedProblems()) {
-                sb.append("• ").append(p.getTitle()).append("（").append(p.getDifficulty()).append("）\n");
-                sb.append("  推荐理由：").append(p.getReason()).append("\n");
-            }
-            sb.append("\n");
-        }
-
-        if (response.getStudyPlan() != null) {
-            sb.append("═══ 学习计划 ═══\n");
-            sb.append("短期目标：").append(response.getStudyPlan().getShortTerm()).append("\n");
-            sb.append("中期目标：").append(response.getStudyPlan().getMidTerm()).append("\n");
-            sb.append("长期目标：").append(response.getStudyPlan().getLongTerm()).append("\n");
-        }
-
-        return sb.toString();
+        return builder.toString().trim();
     }
 }
